Se integra componente confirm en Reset.

--- a/BlazorApp/appsettings.Development.json
+++ b/BlazorApp/appsettings.Development.json
@@ -5,7 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DetailedErrors": true,
   "WebAPI": {
     "uri": "http://localhost:5062"
-  } 
+  }
 }
